client and server changes

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,25 @@
-# Use Node.js 20 base image
-FROM node:20.14.0-alpine
+# Use Node.js image
+FROM node:20.14.0
 
-# Set working directory
+# Set the working directory
 WORKDIR /app
 
-# Copy package files and install dependencies
-COPY package.json package-lock.json ./
-RUN npm install --legacy-peer-deps
+# Copy package.json and package-lock.json
+COPY package*.json ./
 
-# Copy the application code
+# Install dependencies
+RUN npm install
+
+# Copy the rest of the application
 COPY . .
 
-# Expose port (match your Express server port)
+# Compile TypeScript to JavaScript
+RUN npm run build
+
+RUN ls -l dist/
+
+# Expose port 9000
 EXPOSE 9000
 
-# Start the server
-CMD ["npm", "start"]
+# Start the application
+CMD ["node", "dist/server.js"]
