--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,16 +11,20 @@ RUN npm install --legacy-peer-deps
 # Copy the rest of the app source code
 COPY . ./
 
+ENV REACT_APP_API_URL=http://localhost:9000
+
 # Build the React app
 RUN npm run build
 
 # Step 2: Serve the App with Nginx
 FROM nginx:alpine
 
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 # Copy the built files from the previous step
 COPY --from=build /app/build /usr/share/nginx/html
 
-EXPOSE 3000
+#EXPOSE 3000
 EXPOSE 80
 
 # Start Nginx
