--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,9 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules", "dist", "build"]
 }
